# xwm

./: .gitignore  .session.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  run.sh  xinitrc
cmake/: XEPHYR.cmake
include/: client.h  clients.h  config.def.h  config.h  events.h  main.h  ui.h  util.h  utils.h  wm.h
src/: client.c  clients.c  events.c  main.c  ui.c  utils.c  wm.c
test/src/: check_callback.c  check_linked_list.c  test.c
